tests/snapshots/cli__check_ignore_message_pattern_invalid_regex_fails.snap
---
source: tests/cli.rs
expression: sanitized
---
stdout:
---
stderr:
regex parse error:
    [
    ^
error: unclosed character class
